kubernetes/dct-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dct
  namespace: dct
  labels:
    app: dct
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: dct
  type: ClusterIP
